<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/my_toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            android:elevation="4dp"
            android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewApp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/escolha_do_app"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewResultadoApp"
            app:layout_constraintStart_toStartOf="@+id/imageViewResultadoApp"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <TextView
            android:id="@+id/textViewJogador"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/escolha_do_jogador"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewResultadoJogador"
            app:layout_constraintStart_toStartOf="@+id/imageViewResultadoJogador"
            app:layout_constraintTop_toBottomOf="@id/my_toolbar" />

        <ImageView
            android:id="@+id/imageViewResultadoJogador"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/box_para_escolha_do_app"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewResultadoApp"
            app:layout_constraintTop_toBottomOf="@+id/textViewJogador"
            app:srcCompat="@drawable/padrao" />

        <ImageView
            android:id="@+id/imageViewResultadoApp"
            android:layout_width="140dp"
            android:layout_height="140dp"
            android:contentDescription="@string/box_para_escolha_do_app"
            app:layout_constraintEnd_toStartOf="@+id/imageViewResultadoJogador"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewApp"
            app:srcCompat="@drawable/padrao" />

        <TextView
            android:id="@+id/textViewResultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/label_escolha"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewResultadoApp" />

        <ImageView
            android:id="@+id/imageViewPapel"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/opcao_papel"
            app:layout_constraintEnd_toStartOf="@+id/imageViewTesoura"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewPedra"
            app:layout_constraintTop_toBottomOf="@+id/textViewResultado"
            app:srcCompat="@drawable/papel" />

        <TextView
            android:id="@+id/txPapel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/papel"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPapel"
            app:layout_constraintStart_toStartOf="@+id/imageViewPapel"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPapel" />

        <ImageView
            android:id="@+id/imageViewLagarto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/opcao_lagarto"
            app:layout_constraintEnd_toStartOf="@+id/imageViewSpok"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPapel"
            app:srcCompat="@drawable/lagarto" />

        <TextView
            android:id="@+id/txtLagarto"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lagarto"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewLagarto"
            app:layout_constraintStart_toStartOf="@+id/imageViewLagarto"
            app:layout_constraintTop_toBottomOf="@+id/imageViewLagarto" />

        <ImageView
            android:id="@+id/imageViewSpok"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/opcao_spok"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewLagarto"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPapel"
            app:srcCompat="@drawable/spock" />

        <TextView
            android:id="@+id/txtSpock"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/spock"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewSpok"
            app:layout_constraintStart_toStartOf="@+id/imageViewSpok"
            app:layout_constraintTop_toBottomOf="@+id/imageViewSpok" />

        <ImageView
            android:id="@+id/imageViewTesoura"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/opcao_tesoura"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/imageViewPapel"
            app:layout_constraintTop_toBottomOf="@+id/textViewResultado"
            app:srcCompat="@drawable/tesoura" />

        <TextView
            android:id="@+id/txtTesoura"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tesoura"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewTesoura"
            app:layout_constraintStart_toStartOf="@+id/imageViewTesoura"
            app:layout_constraintTop_toBottomOf="@+id/imageViewTesoura" />

        <ImageView
            android:id="@+id/imageViewPedra"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginTop="32dp"
            android:contentDescription="@string/opcao_pedra"
            app:layout_constraintEnd_toStartOf="@+id/imageViewPapel"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewResultado"
            app:srcCompat="@drawable/pedra" />

        <TextView
            android:id="@+id/txtPedra"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pedra"
            android:textColor="@color/black"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@+id/imageViewPedra"
            app:layout_constraintStart_toStartOf="@+id/imageViewPedra"
            app:layout_constraintTop_toBottomOf="@+id/imageViewPedra" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_x_jogador"
            app:layout_constraintBottom_toBottomOf="@+id/imageViewResultadoApp"
            app:layout_constraintEnd_toStartOf="@+id/imageViewResultadoJogador"
            app:layout_constraintStart_toEndOf="@+id/imageViewResultadoApp"
            app:layout_constraintTop_toBottomOf="@+id/textViewApp" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>